<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".connexion.Login">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="89dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="73dp"
        android:layout_height="65dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion" />

    <Button
        android:id="@+id/connexion"
        style="@style/Widget.Material3.Button"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/identify"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="233dp"
        android:layout_height="350dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="79dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_2024_03_31_201419_removebg_preview" />

    <EditText
        android:id="@+id/loginTextPassword"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>