<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".questions.Question7">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="131dp"
        android:layout_height="253dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_2024_03_31_201406_removebg_preview" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="418dp"
        android:layout_height="450dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectengle_circle" />

    <EditText
        android:id="@+id/inputAnswer2"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_year"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/inputSoluce2"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/image"
        android:text="@string/none"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAnswer2" />

    <Button
        android:id="@+id/inputNext2"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginBottom="36dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backQuestion7"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/inputQuestionText2"
        android:layout_width="241dp"
        android:layout_height="157dp"
        android:layout_marginStart="28dp"
        android:text="@string/question7"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backQuestion7"
        app:layout_constraintVertical_bias="0.406" />

</androidx.constraintlayout.widget.ConstraintLayout>