<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradeinverse"
    tools:context=".connexion.Login">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics_button"
        app:srcCompat="@drawable/share" />

    <TextView
        android:id="@+id/share"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="85dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/topics_button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/topics_button"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="89dp"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/topics_button" />

    <Button
        android:id="@+id/connexion"
        style="@style/Widget.Material3.Button"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registration"
        android:layout_width="255dp"
        android:layout_height="66dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/black"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="232dp"
        android:layout_height="333dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_2024_03_31_201406_removebg_preview" />


</androidx.constraintlayout.widget.ConstraintLayout>