<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/play_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/black"
        android:text="@string/button_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/topics_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/topics_button"
        android:layout_width="255dp"
        android:layout_height="66dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="83dp"
        android:backgroundTint="@color/black"
        android:text="@string/Topics"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="89dp"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/topics_button" />

    <TextView
        android:id="@+id/share"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="85dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/topics_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics_button"
        app:srcCompat="@drawable/share" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/topics_button"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="353dp"
        android:layout_height="365dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_removebg_preview" />

    <!-- Circular Image View  -->

</androidx.constraintlayout.widget.ConstraintLayout>