<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradeinverse"
    tools:context=".Play">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="278dp"
        android:layout_height="464dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/rectengle" />

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.Material3.Button"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/button_play"
        style="@style/Widget.Material3.Button"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="212dp"
        android:backgroundTint="@color/black"
        android:text="@string/lets_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="229dp"
        android:layout_height="239dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play"  />


    <TextView
        android:id="@+id/textuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#009688"
        android:textColorHint="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="133dp"
        android:layout_height="211dp"
        android:layout_marginStart="312dp"
        android:layout_marginTop="616dp"
        android:contentDescription="@string/image"
        android:rotation="320"
        android:src="@drawable/screenshot_2024_03_31_201406_removebg_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play" />

</androidx.constraintlayout.widget.ConstraintLayout>