<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradeinverse"
    tools:context=".registration">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_wus"
        style="@style/Widget.Material3.Button"
        android:layout_width="292dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/black"
        android:text="@string/register_us"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_user"
        android:layout_width="236dp"
        android:layout_height="59dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/register_username"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="236dp"
        android:layout_height="64dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/register_password"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="238dp"
        android:layout_height="253dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_2024_03_31_201454_removebg_preview" />
</androidx.constraintlayout.widget.ConstraintLayout>